fix data refresh problem of info bar by shifting it to a new state and writing seperate controller

--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -183,15 +183,12 @@ ion-content {
 	font-size: 12px;
 }
 .details-list {
-	position: relative;
-	top: 10px;
-	height: 200px;
 	padding: 0;
 	border: 1px solid #ef473a;
 }
 .class-info-bar {
 	background-color: #ef473a;
-	height: 15%;
+	height: 40px;
 	text-align: center;
 	color: #FFF;
 	border-color: rgb(178, 178, 178);
